--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.16.1
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit NeoPixel@^1.12.3
+	miguel5612/MQUnifiedsensor@^3.0.0
+	arduino-libraries/NTPClient@^3.2.1
